CFLAGS +=-std=gnu99
SUBDIRS = serial io settings signal sockets modbus webserver modbusrtu thread
bin_PROGRAMS = hello interactive image chota count debug conjunk conjunk2 conjunk3 ipc-pipes rng pid time search filesize dir find hexprint assert popen stdin2arg printargs scandir scandir2 ftw getlogin gethostname fork forkexec getopt environ execve allocstruct allocstring callback fgets fifo read_realloc
hello_SOURCES = hello.c
