bin_PROGRAMS = client-send-once client-send-forever client-recv-once client-recv-forever server-send-forever server-recv-forever server-send-once server-recv-once server-reply-once server-ask-once client-ask-once server-reply-forever mbprotostructalign mbprotoserverstructalign webclient webclientput udp-recv-once udp-send-once udp-ask-once server-recv-forever-raw server-recv-once-raw udp-recv-once-raw udp-send-once-broadcast udp-recv-once-broadcast
 
